vlib/v/checker/tests/inout/mod_op_wrong_right_type_err_c.vv
struct A{}
fn main() {
	a := A{}
	1 % a
}
